--- a/index.html
+++ b/index.html
@@ -1,126 +1,130 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-</head> 
-<body>  
+    <link rel="stylesheet" href="./css/styles.css">
+</head>
+
+<body>
     <header>
         <!--Верхня лінія-->
-        <nav>   
-        <a href="./index.html">WebStudio</a>  
+        <nav>
+            <a href="./index.html">WebStudio</a>
 
-        <ul>
-            <li><a href=""></a>Студия</li>
-            <li><a href=""></a>Портфолио</li>
-            <li><a href=""></a>Контакты</li> 
-        </ul>
+            <ul>
+                <li><a href="">Студия</a></li>
+                <li><a href="">Портфолио</a></li>
+                <li><a href="">Контакты</a></li>
+            </ul>
+        </nav>
 
         <ul>
             <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
             <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
-    </nav>
+
     </header>
-        <!-- Шапка сайта -->
+    <!-- Шапка сайта -->
     <main>
         <section>
             <h1>Эффективные решения для вашего бизнеса</h1>
-            <a href="">Заказать услугу</a>
+            <button type="button">Заказать услугу</button>
         </section>
 
-    <section>
-        <!--- Особлтвості -->
-        <ul>
-            <li>
-                <h2>Внимание к деталям</h2>
-                <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
-            </li>
+        <section>
+            <!--- Особлтвості -->
+            <ul>
+                <li>
+                    <h3>Внимание к деталям</h3>
+                    <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                </li>
 
-            <li>
-                <h2>Пунктуальность</h2>
-                <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
-            </li>
+                <li>
+                    <h3>Пунктуальность</h3>
+                    <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                </li>
 
-            <li>
-                <h2>Планирование</h2> 
-                <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
-            </li>
+                <li>
+                    <h3>Планирование</h3>
+                    <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                </li>
 
-            <li>
-                <h2>Современные технологии</h2>
-                <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p> 
-            </li>
-        </ul>
+                <li>
+                    <h3>Современные технологии</h3>
+                    <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                </li>
+            </ul>
+        </section>
 
-        <h2>Чем мы занимаемся</h2>
-    <ul>
-    <li>
-        <img src="./images/work-1.jpg" alt="графічний планшет в руках" width="370" />
-    </li>
+        <section>
+            <h2>Чем мы занимаемся</h2>
+            <ul>
+                <li>
+                    <img src="./images/work-1.jpg" alt="графічний планшет в руках" width="370" />
+                </li>
 
-    <li>
-        <img src="./images/work-2.jpg" alt="графічний планшет в руках" width="370" />
-    </li>
+                <li>
+                    <img src="./images/work-2.jpg" alt="графічний планшет в руках" width="370" />
+                </li>
 
-    <li>
-        <img src="./images/work-3.jpg" alt="графічний планшет в руках" width="370" />
-    </li>
-    </ul>
-    </section>
+                <li>
+                    <img src="./images/work-3.jpg" alt="графічний планшет в руках" width="370" />
+                </li>
+            </ul>
+        </section>
 
-    <section>
-        <!---Наша команда-->
-        <h2>Наша команда</h2>
-        <ul>
-            <li>
-                <img src="./images/team-1.jpg" alt="наша команда" width="270" />
-                <h3>Игорь Демьяненко</h3>
-                <p>Product Designer</p>
-            </li>
-            
-            <li>
-                <img src="./images/team-2.jpg" alt="наша команда" width="270" />
-                <h3>Ольга Репина</h3>
-                <p>Frontend Developer</p>
-            </li>
+        <section>
+            <!---Наша команда-->
+            <h2>Наша команда</h2>
+            <ul>
+                <li>
+                    <img src="./images/team-1.jpg" alt="наша команда" width="270" />
+                    <h3>Игорь Демьяненко</h3>
+                    <p>Product Designer</p>
+                </li>
 
-            <li>
-                <img src="./images/team-3.jpg" alt="наша команда" width="270" />
-                <h3>Николай Тарасов</h3>
-                <p>Marketing</p>
-            </li>
+                <li>
+                    <img src="./images/team-2.jpg" alt="наша команда" width="270" />
+                    <h3>Ольга Репина</h3>
+                    <p>Frontend Developer</p>
+                </li>
 
-            <li>
-                <img src="./images/team-4.jpg" alt="наша команда" width="270" />
-                <h3>Михаил Ермаков</h3>
-                <p>UI Designer</p>
-            </li>
-        </ul>
-    </section>
-</main>
+                <li>
+                    <img src="./images/team-3.jpg" alt="наша команда" width="270" />
+                    <h3>Николай Тарасов</h3>
+                    <p>Marketing</p>
+                </li>
+
+                <li>
+                    <img src="./images/team-4.jpg" alt="наша команда" width="270" />
+                    <h3>Михаил Ермаков</h3>
+                    <p>UI Designer</p>
+                </li>
+            </ul>
+        </section>
+    </main>
 
     <footer>
         <!--Підвал-->
-    <a href="./index.html">WebStudio</a>
+        <a href="./index.html">WebStudio</a>
 
-    <address>
-    <ul>
-        <li>
-            г. Киев, пр-т Леси Украинки, 26
-        </li>
+        <address>
+            <p>г. Киев, пр-т Леси Украинки, 26</p>
+            <ul>
+                <li>
+                    <a href="mailto:info@example.com">info@example.com</a>
+                </li>
 
-        <li>
-            <a href="mailto:info@example.com">info@example.com</a>
-        </li>
-
-        <li>
-            <a href="tel:+380991111111">+38 099 111 11 11</a>
-        </li>
-    </ul>
-</address>
+                <li>
+                    <a href="tel:+380991111111">+38 099 111 11 11</a>
+                </li>
+            </ul>
+        </address>
     </footer>
 </body>
+
 </html>
